--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "./src", // src 폴더를 기준으로 절대 경로 시작
+    "paths": {
+      "@/*": ["*"] // '@/components/...' → 'src/components/...'
+    }
   },
   "include": ["src"]
 }
