[fix] CI workflow 수정

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Run lint (optional)
         run: npm run lint
+        continue-on-error: true
 
       - name: Run unit tests (optional)
         run: npm run test
+        continue-on-error: true
