--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "@eslint/js": "^9.36.0",
     "@types/axios": "^0.9.36",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-react": "^5.0.3",
@@ -46,7 +44,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
   }
