--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.36.0",
     "@types/axios": "^0.9.36",
     "@types/node": "^24.6.0",
+    "@types/react-dom": "^19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-react": "^5.0.3",
